--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "thiradus-cors-middleware",
-	"description": "A simplistic cors middleware module. ",
+	"description": "A simplistic yet effective Cross origin resource sharing Express.js middleware.",
 	"author": "TheBillyIsMe",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {},
