--- a/package.json
+++ b/package.json
@@ -24,11 +24,6 @@
 		"url": "https://github.com/Thiradus/cors-middleware/issues"
 	},
 	"devDependencies": {
-		"eslint": "^7.7.0",
-		"eslint-plugin-html": "^6.0.3",
-		"eslint-plugin-import": "^2.22.0",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^4.0.1"
+		"eslint-config-thiradus": "^1.0.1"
 	}
 }
